# cppgit2

./: CMakeLists.txt  conanfile.py
.github/workflows/: pr_verification.yml  release.yml  release_build.yml
include/cppgit2/: annotated_commit.hpp  apply.hpp  attribute.hpp  bitmask_operators.hpp  blame.hpp  blob.hpp  branch.hpp  checkout.hpp  cherrypick.hpp  clone.hpp  commit.hpp  config.hpp  connection_direction.hpp  credential.hpp  data_buffer.hpp  diff.hpp  fetch.hpp  file_mode.hpp  git_exception.hpp  index.hpp  indexer.hpp  libgit2_api.hpp  merge.hpp  note.hpp  object.hpp  odb.hpp  oid.hpp  pack_builder.hpp  patch.hpp  pathspec.hpp  (+26 more)
samples/: add_attribute_macro.cpp  blame_file.cpp  branch_remote_name.cpp  cat_file.cpp  check_ignore_rules.cpp  clone_and_checkout_branch.cpp  clone_repository.cpp  commit_file.cpp  create_bare_repository.cpp  create_branch.cpp  create_empty_initial_commit.cpp  create_remote.cpp  create_repository.cpp  discover_path.cpp  lookup_submodule.cpp  open_submodule.cpp  pathspec_match_repo_workdir.cpp  print_attributes.cpp  print_branches.cpp  print_commits.cpp  print_default_signature.cpp  print_diff_index_to_workdir.cpp  print_references.cpp  print_reflog_head.cpp  print_stash_entries.cpp  print_status.cpp  print_submodules.cpp  print_tag_names.cpp  print_tags.cpp  revwalk_from_head.cpp  walk_tree.cpp
src/: annotated_commit.cpp  attribute.cpp  blame.cpp  blob.cpp  commit.cpp  config.cpp  credential.cpp  data_buffer.cpp  diff.cpp  index.cpp  indexer.cpp  merge.cpp  note.cpp  object.cpp  odb.cpp  oid.cpp  pack_builder.cpp  patch.cpp  pathspec.cpp  rebase.cpp  reference.cpp  reflog.cpp  refspec.cpp  remote.cpp  repository.cpp  revwalk.cpp  signature.cpp  strarray.cpp  submodule.cpp  tag.cpp  transaction.cpp  tree.cpp  tree_builder.cpp  worktree.cpp
test/: doctest.hpp  test_data_buffer.cpp  test_oid.cpp  test_signature.cpp  test_strarray.cpp
